Basic a11y, footer fix, content shift, styles changes

--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -142,29 +142,19 @@
 /* submit btn styles */
 
 .btn--contact {
-  border-radius: 5px;
-  background-color: $color-blue-medium;
-  color: $color-primary-font;
-  cursor: pointer;
   font-size: 16px;
-  font-weight: 600;
   margin-top: 20px;
   margin-right: 30px;
   float: right;
-  padding: 10px;
-  text-align: center;
-  text-decoration: none;
-  width: 100px;
+  @include btn-default;
 }
 
 .btn--contact:hover {
-  background-color: $color-blue-light;
-  color: $color-blue-dark;
+  @include btn-default--hover;
 }
 
 .btn--contact:active {
-  background-color: $color-blue-medium;
-  color: $color-primary-font;
+  @include btn-default--active;
 }
 
 /* contact link styles */
@@ -177,7 +167,7 @@
 }
 
 .contact-info__link-title {
-  color: $color-blue-light;
+  color: darken($color-blue-light, 20%);
   margin-right: 5px;
   font-weight: 700;
 }
